added custom font and added some basic layout

--- a/ios/MyGymApp/Info.plist
+++ b/ios/MyGymApp/Info.plist
@@ -53,16 +53,16 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Lato-Black.ttf</string>
-		<string>Lato-BlackItalic.ttf</string>
-		<string>Lato-Bold.ttf</string>
-		<string>Lato-BoldItalic.ttf</string>
-		<string>Lato-Italic.ttf</string>
-		<string>Lato-Light.ttf</string>
-		<string>Lato-LightItalic.ttf</string>
-		<string>Lato-Regular.ttf</string>
-		<string>Lato-Thin.ttf</string>
-		<string>Lato-ThinItalic.ttf</string>
+		<string>lato-black.ttf</string>
+		<string>lato-blackitalic.ttf</string>
+		<string>lato-bold.ttf</string>
+		<string>lato-bolditalic.ttf</string>
+		<string>lato-italic.ttf</string>
+		<string>lato-light.ttf</string>
+		<string>lato-lightItalic.ttf</string>
+		<string>lato-regular.ttf</string>
+		<string>lato-thin.ttf</string>
+		<string>lato-thinitalic.ttf</string>
 	</array>
 </dict>
 </plist>
