--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "styled-components": "^5.3.6"
   },
   "resolutions": {
@@ -32,19 +36,19 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
-    "@types/styled-components": "^5.1.25",
-    "@types/styled-components-react-native": "^5.1.3",
     "@types/react-native": "^0.70.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
-    "ts-node": "^10.9.1",
-    "tslint-react-hooks": "^2.2.2",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
+    "ts-node": "^10.9.1",
+    "tslint-react-hooks": "^2.2.2",
     "typescript": "^4.8.3"
   },
   "jest": {
