installed react-navtive-svg

--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "18.1.0",
-    "react-native": "0.70.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "react": "18.1.0",
+    "react-native": "0.70.6",
+    "react-native-svg": "^13.6.0",
     "styled-components": "^5.3.6"
   },
   "resolutions": {
