--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@react-navigation/native-stack": "^6.6.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-svg": "^13.6.0",
     "styled-components": "^5.3.6"
   },
