--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,10 @@ buck-out/
 *.keystore
 !debug.keystore
 
+# dotenv environment variables file
+.env
+.env.test
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
