--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@tanstack/react-query": "^4.24.4",
+    "axios": "^1.3.1",
     "dotenv": "^16.0.3",
     "react": "18.1.0",
     "react-native": "0.70.6",
